# installector

./: .gitignore  README.md  main.py  pyproject.toml
client/: console.py  io.py  main_menu.py  message_broker.py  obs_menu.py  promptgen.py  sysdetect.py  terminal.py  vendormanager.py  verify_execution.py  verify_output.py  verify_status.py
scripts/: run.sh
server/: __main__.py  llm.py  message_broker.py  obs_base_prompt.py  obs_prompt.py  obs_prompt_gen.py  promptgen.py
src/instalar/: __main__.py
src/instalar/client/: console.py  console_autocomplete.py  console_formatter.py  console_processor.py  console_response.py  obs_menu.py  sysdetect.py
src/instalar/server/: llm.py  message_broker.py  obs_prompt_gen.py
