[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instalar"
version = "0.0.10"
dependencies = [
    "litellm==1.60.5",
    "prompt-toolkit>=3.0.50",
    "pygments>=2.19.1",
    "rich>=13.9.4",
    "psutil>=5.9.0",
    "distro>=1.8.0",
]
requires-python = ">=3.13"
authors = [
  {name = "Example", email = "example@example.com"}
]
description = "AI assistant for installing agent collectors in your terminal"
readme = "README.md"
license = { text = "GPL-3.0" }
keywords = ["install", "setup", "telemetry", "agent", "opentelemetry", "observability", "monitoring"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Installation/Setup"
]

[project.optional-dependencies]
#gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/jek-bao-choo/installector.git"
Changelog = "https://github.com/jek-bao-choo/installector/blob/master/CHANGELOG.md"

[project.scripts]
instalar-cli = "instalar.__main__:main_cli"

#[project.gui-scripts]
#instalar-gui = "instalar.__main__:main_gui"